--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "neptun-ms-user-crud01",
+  "name": "neptune-ms-user-crud01",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
